# ktrace

./: Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
decode/: ktrace-decode.py
docs/: index.html
ktrace-core/: Cargo.toml
ktrace-core/src/: format.rs  lib.rs
ktrace-core/src/transport/: arm64.rs  mod.rs  x86_64.rs
spec/: wire-format.md
